--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p>
-              Sed tempus urna et pharetra pharetra massa massa ultricies. Porttitor rhoncus dolor purus non enim praesent. Id aliquet risus feugiat in ante metus dictum. 
+              Scientistic Data Scientist looking for new opportunities.  
             </p>
           </div>
           
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-              Pellentesque nec nam aliquam sem et tortor consequat. Quisque sagittis purus sit amet volutpat consequat. Magna eget est lorem ipsum dolor. 
+              tfriedrich.solutions@gmail.com 
             </p>
           </div>
           
