--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header id="header">
       <img src="logo.png">
-      <h1>Tara Friedrich</h1>
+      <h1>Tara Friedrich, PhD</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
@@ -69,7 +69,12 @@
     </div>
 
     <footer>  
+      <p>
       <a href="https://github.com/staracode">GitHub</a>
+      </p>
+      <p>
+      <a href="https://www.linkedin.com/in/tara-friedrich-bioinformatics/">LinkedIn</a>
+      </p>
     </footer>
     
     <!-- Load additional JS scripts here -->
