--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <header id="header">
       <img src="logo.png">
       <h1>Tara Friedrich, PhD</h1>
+      <h3>Genome Explorer</h3>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
@@ -46,7 +47,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              This is a placeholder for my portfolio. 
+              I studied developmental pathways that regulate limb, heart, and liver, brain. I want to understand these mechanisms at the molecular level. To accomplish this, I integrate data to identify how these molecules regulate tissues at precise timepoints. I use whatever data is available and whatever model is appropriate. You can't be picky when exploring new frontiers.  
             </p>
           </div>
           
