--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              I studied developmental pathways that regulate limb, heart, and liver, brain. I want to understand these mechanisms at the molecular level. To accomplish this, I integrate data to identify how these molecules regulate tissues at precise timepoints. I use whatever data is available and whatever model is appropriate. You can't be picky when exploring new frontiers.  
+              I studied developmental pathways that regulate limb, heart, liver, and brain. I want to understand these mechanisms at the molecular level because we can solve diseases from dementia to cancer by looking at processes at the molecular level. To accomplish this, I integrated data to identify how these molecules regulate tissues at precise timepoints. I used whatever data is available and whatever model is appropriate. You can't be picky when exploring new frontiers.  
             </p>
           </div>
           
