add email hyperlink and misc page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
         <li><a href="#contact">contact</a></li>
+        <li><a href="#misc">misc</a></li>
       </ul>                 
     </header>
    
@@ -61,7 +62,13 @@
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-              email: tfriedrich.solutions@gmail.com 
+            <a href= "mailto:tfriedrich.solutions@gmail.com">tfriedrich.solutions@gmail.com</a>
+            </p>
+          </div>
+          <div id="misc" class="content-region hide">
+            <h2>Misc</h2>
+            <p>
+      <a href="https://www.news.uct.ac.za/images/archive/releases/2016/2016-03-29_BatWing.pdf">Limb</a>
             </p>
           </div>
           
