--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       <p>
       <a href="https://www.linkedin.com/in/tara-friedrich-bioinformatics/">LinkedIn</a>
       </p>
+      <p>
+      <a href="assets/Friedrich_CV.pdf">CV</a>
+      </p>
+
     </footer>
     
     <!-- Load additional JS scripts here -->
