--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <a href="https://www.linkedin.com/in/tara-friedrich-bioinformatics/">LinkedIn</a>
       </p>
       <p>
-      <a href="assets/Friedrich_CV.pdf">CV</a>
+      <a href="assets/cv.pdf">CV</a>
       </p>
 
     </footer>
