--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <!-- Page setup -->
+    <meta http-equiv="refresh" content="0;url=https://www.tarafriedrich.com" />
     <meta charset="utf-8">
     <title>Tara Friedrich, PhD</title>
     <meta name="description" content="This is a demonstration of my scientific work.">
