--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p>
-              Bioinformatics Data Scientist with expertise in multimodal clinical and genetic data analysis. Proficient in ad- vanced statistical methods and converting ideas into code that bridge the gap between domain experts and engineering teams. Skilled in delivering actionable insights to drive innovation in healthcare and research.  
+              Bioinformatics Data Scientist with expertise in multimodal clinical and genetic data analysis. Proficient in advanced statistical methods and converting ideas into code that bridge the gap between domain experts and engineering teams. Skilled in delivering actionable insights to drive innovation in healthcare and research.  
             </p>
           </div>
           
