--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       <p>
       <a href="assets/cv.pdf">CV</a>
       </p>
-
+      <p>
+      <a href="https://tarafriedrich.substack.com/?r=1o9pv0&utm_campaign=pub-share-checklist">Substack</a>
+      </p>
     </footer>
     
     <!-- Load additional JS scripts here -->
