--- a/index.html
+++ b/index.html
@@ -76,19 +76,11 @@
       </div>
     </div>
 
-    <footer>  
-      <p>
+    <footer style="display: flex; justify-content: center; gap: 40px; padding: 10px;" >  
       <a href="https://github.com/staracode">GitHub</a>
-      </p>
-      <p>
       <a href="https://www.linkedin.com/in/tara-friedrich-bioinformatics/">LinkedIn</a>
-      </p>
-      <p>
       <a href="assets/cv.pdf">CV</a>
-      </p>
-      <p>
       <a href="https://tarafriedrich.substack.com/?r=1o9pv0&utm_campaign=pub-share-checklist">Substack</a>
-      </p>
     </footer>
     
     <!-- Load additional JS scripts here -->
