--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ Data Science: Pandas, Numpy, Scikit-learn, PyTorch, Matplotlib, Seaborn, Ggplot2
 Computational Resources: High Performance Cluster, AWS (S3, EC2, Batch, Lambda), Google Cloud Compute, Kubernetes,
 Docker, Argo, WDL, Nextflow, DNANexus, Git, JIRA, SQL (MySQL, Spark), noSQL (MongoDB, Amazon DynamoDB), REST API
            <p>
-Statistics and Machine Learning: Hypothesis Testing, Linear and Generalized Linear Modeling, Multivariate Modeling, Clus-
-tering, Dimensionality Reduction, Supervised and Unsupervised Classification, Random Forests, HMM, Kaplan-Meier
+Statistics and Machine Learning: Hypothesis Testing, Linear and Generalized Linear Modeling, Multivariate Modeling, Clustering, Dimensionality Reduction, Supervised and Unsupervised Classification, Random Forests, HMM, Kaplan-Meier
            </p>
            <p>
 Bioinformatics Tools: Dragen, BWA, VEP, FastQC, MultiQC, Samtools, Bedtools, Seurat, Scanpy, Kalisto, DESeq2, EdgeR
