add CS229 project

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ Bioinformatics Tools: Dragen, BWA, VEP, FastQC, MultiQC, Samtools, Bedtools, Seu
 	    <p>
        <a href="https://medium.com/@tara.friedrich/strain-eliminator-phage-therapy-as-a-possible-solution-to-antibiotic-    resistance-a39124bfc7cb">Strain Eliminator</a>
             </p>
+	    <p>
+	    <a href="https://cs229.stanford.edu/proj2014/Tara%20Friedrich,%20Context%20Specific%20Sequence%20Preference%20Of%20DNA%20Binding%20Proteins.pdf">Transcription Factor Binding Machine Learning</a>
+            </p>
           </div>
           
         </div>
