google scholar link

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Bioinformatics Tools: Dragen, BWA, VEP, FastQC, MultiQC, Samtools, Bedtools, Seu
       <a href="https://www.linkedin.com/in/tara-friedrich-bioinformatics/">LinkedIn</a>
       <a href="assets/cv.pdf">CV</a>
       <a href="https://tarafriedrich.substack.com/?r=1o9pv0&utm_campaign=pub-share-checklist">Substack</a>
+      <a href="https://scholar.google.com/citations?user=uuaKUmUAAAAJ&hl=en">Google Scholar</a>
     </footer>
     
     <!-- Load additional JS scripts here -->
